update seatmap